[update] mi tarjeta

--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/app.css" />
-    <title>{Name}</title>
+    <title>Nicolás Rojas - Generation</title>
   </head>
   <body>
-    <article>
+    <article class="card">
       <header>
-        <img src="./assets/svg/heart.svg" alt="icon heart" />
+        <img  class= "header__icon" src="./assets/svg/heart.svg" alt="icon heart" />
       </header>
-      <img src="" alt="{name}" />
-      <h1>{Name}</h1>
-      <p>{cargo}</p>
-      <p>{frase}</p>
+      <img class="me" src="/assets/img/IMG-20210112-WA0033.jpg" alt="Nicolas Rojas" />
+      <h1>Nicolás Rojas Concha</h1>
+      <p class="article__subtitle">Estudiante FULL-STACK/JAVA JR</p>
+      <p>No hay limites si usas la imaginación, afortunandamente esta profesión me lo demuestra día a día</p>
       <button>Call me</button>
+      <hr>
       <section>
         <article>
-          <img src="./assets/svg/instagram.svg" alt="" />
-          <p>{Number}</p>
-          <p>Seguidores</p>
+          <a href="">
+            <img src="./assets/svg/instagram.svg" alt="" />
+          </a>
+          <p>45</p>
+          <p class="item__footer">Seguidores</p>
         </article>
+
         <article>
-          <img src="./assets/svg/linkedin.svg" alt="" />
-          <p>{Number}</p>
-          <p>Seguidores</p>
+          <a href="https://www.linkedin.com/in/nicolasrojasc1/">
+            <img src="./assets/svg/linkedin.svg" alt="" />
+          </a>
+          <p>10</p>
+          <p class="item__footer">Seguidores</p>
         </article>
+
         <article>
-          <img src="./assets/svg/github.svg" alt="" />
-          <p>{Number}</p>
-          <p>Seguidores</p>
+          <a href="https://github.com/NicolasRojas1">
+            <img src="./assets/svg/github.svg" alt="" />
+          </a>
+          <p>10</p>
+          <p class="item__footer">Seguidores</p>
         </article>
       </section>
     </article>
